used better approach