@@ -26,7 +26,7 @@ public class MainJava8_3 {
 				.filter(dish -> dish.getCalories() > 300) // create a pipeline of operations: first filter high calories dishes
 				.map(Dish::getName) // gets the names of the dishes
 				.limit(3) // selects only the first three
-				.collect(Collectors.toList()); // stores the results in another list
+				.toList(); // stores the results in another list
 		
 		System.out.println(threeHighCaloricDishMenus);
 	}
